<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="20dp"
    android:background="@drawable/roundedbutton"
    android:orientation="horizontal">

    <TextView
        android:id="@+id/confirm_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:fontFamily="@font/roboto_regular"
        android:gravity="left"
        android:text="@string/log_confirmation"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/sendButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/send"
        android:textAllCaps="false"
        android:textColor="@color/colorBlueBright"
        android:textSize="16sp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/confirm_text" />

    <Button
        android:id="@+id/closeButton"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="8dp"
        android:layout_marginRight="8dp"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorRed"
        android:textSize="16sp"
        app:layout_constraintRight_toLeftOf="@id/sendButton"
        app:layout_constraintTop_toBottomOf="@id/confirm_text" />

</androidx.constraintlayout.widget.ConstraintLayout>