<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".NewsActivity"
    android:orientation="vertical"
    >

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/top_bar_name"
            android:layout_gravity="center_vertical|center_horizontal"
            android:textSize="16sp"
            android:textStyle="bold"
            android:fontFamily="@font/roboto_regular"
            android:textColor="@color/colorWhite"/>

    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/activity_news__top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorBlue"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:gravity="center"
        android:orientation="horizontal"
        >

        <RadioButton
            android:id="@+id/activity_news__radio_main"
            android:layout_width="100dp"
            android:background="@drawable/radio_flat_selector__left"
            android:textColor="@color/radio_flat_text_selector"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:gravity="center"
            android:paddingBottom="5dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/top_bar_button__main"
            android:textSize="12sp"
            android:textAllCaps="false"
            android:button="@android:color/transparent"
            android:checked="true"
             />

        <RadioButton
            android:id="@+id/activity_news__radio_subs"
            android:paddingEnd="20dp"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector__right"
            android:textColor="@color/radio_flat_text_selector"
            android:button="@android:color/transparent"
            android:text="@string/top_bar_button__sub"
            android:textSize="12sp"
            android:textAllCaps="false"

            />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/activity_news__small_bar"
        android:layout_width="match_parent"
        android:layout_height="10dp"
        android:background="@color/colorBackground"
        />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/activity_news__news_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"


         />


</LinearLayout>
