<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/colorBlue">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/top_bar_name"
            android:textColor="@color/colorWhite"
            android:textSize="16sp"
            android:textStyle="bold" />

    </androidx.appcompat.widget.Toolbar>

    <RadioGroup
        android:id="@+id/activity_news__top_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@color/colorBlue"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="10dp">

        <RadioButton
            android:id="@+id/activity_news__radio_main"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector__left"
            android:button="@android:color/transparent"
            android:checked="true"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/top_bar_button__main"
            android:textAllCaps="false"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="12sp" />

        <RadioButton
            android:id="@+id/activity_news__radio_subs"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector__right"
            android:button="@android:color/transparent"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center"
            android:maxLines="1"
            android:paddingStart="20dp"
            android:paddingTop="5dp"
            android:paddingEnd="20dp"
            android:paddingBottom="5dp"
            android:text="@string/top_bar_button__sub"
            android:textAllCaps="false"
            android:textColor="@color/radio_flat_text_selector"
            android:textSize="12sp" />
    </RadioGroup>

    <ProgressBar
        android:id="@+id/news_fragment__progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone"
        />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swiperefresh_items"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/activity_news__news_list"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never" />
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>


</LinearLayout>
