<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBackground"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/App"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlue"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme">


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/app_name"
                android:textColor="#ffffff"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="144dp"
                tools:layout_editor_absoluteY="18dp" />


        </androidx.appcompat.widget.Toolbar>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/prev_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="11.5dp"
                android:layout_marginRight="40dp"
                android:layout_weight="1"
                android:background="@drawable/prev_selector"
                android:visibility="invisible" />

            <androidx.viewpager.widget.ViewPager
                android:id="@+id/view_pager"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:layout_weight="100"
                android:clipToPadding="false"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

            </androidx.viewpager.widget.ViewPager>

            <ImageButton
                android:id="@+id/next_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="40dp"
                android:layout_marginRight="11.5dp"
                android:layout_weight="1"
                android:background="@drawable/next_selector" />

        </LinearLayout>

        <com.google.android.material.tabs.TabLayout
            android:id="@+id/tablayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:tabBackground="@drawable/tab"
            app:tabGravity="center"
            app:tabIndicatorHeight="0dp" />

        <LinearLayout
            android:id="@+id/loginPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp">

            <EditText
                android:id="@+id/Login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="@drawable/up_rounded_edittext"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/login"
                android:inputType="textPersonName"
                android:minHeight="34.5dp"
                android:paddingStart="13dp"
                android:paddingTop="10dp"
                android:paddingEnd="13dp"
                android:paddingBottom="10dp"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/Password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="1dp"
                android:layout_weight="1"
                android:background="@drawable/down_rounded_edittext"
                android:fontFamily="@font/roboto_regular"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:minHeight="34.5dp"
                android:paddingStart="13dp"
                android:paddingTop="10dp"
                android:paddingEnd="13dp"
                android:paddingBottom="10dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/enter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:background="@drawable/enter_select"
                android:enabled="false"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/enter"
                android:textColor="#ffffff"
                android:textColorHighlight="@color/colorButtonPress"
                android:textSize="20sp" />

        </LinearLayout>

    </LinearLayout>


</RelativeLayout>