<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorBlue"
            android:paddingLeft="-8dp">

            <TextView
                android:id="@+id/toolbar__text_view"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:autoSizeTextType="uniform"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/profile"
                android:textAlignment="center"
                android:textColor="@color/colorWhite"
                android:textStyle="bold" />
        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/back_to_group"
            android:layout_width="85dp"
            android:layout_height="match_parent"
            android:layout_marginStart="35dp"
            android:ellipsize="end"
            android:fontFamily="@font/roboto_regular"
            android:gravity="center_vertical"
            android:singleLine="true"

            android:textColor="@color/colorWhite"
            android:textSize="15sp"
            android:visibility="invisible" />
    </FrameLayout>

    <ProgressBar
        android:id="@+id/profile_fragment__progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/profile_content_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:visibility="gone">


        <ScrollView
            android:id="@+id/profile_scroll_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:overScrollMode="never">


            <LinearLayout
                android:id="@+id/profile_wrapper"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                tools:context=".screens.profile.ProfileFragment">

                <RelativeLayout
                    android:id="@+id/bio"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorWhite">

                    <de.hdodenhof.circleimageview.CircleImageView
                        android:id="@+id/profile_image"
                        android:layout_width="74dp"
                        android:layout_height="74dp"
                        android:layout_margin="6dp"
                        android:src="@drawable/img_no_avatar" />

                    <TextView
                        android:id="@+id/profile_fullname"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="12dp"
                        android:layout_toEndOf="@id/profile_image"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/profile_status"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/profile_fullname"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="10dp"
                        android:layout_toEndOf="@id/profile_image"
                        android:fontFamily="@font/roboto_regular"
                        android:textSize="13sp" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/about"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="1dp"
                    android:background="@color/colorWhite"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="7dp"
                        android:fontFamily="@font/roboto_regular"
                        android:padding="3dp"
                        android:text="@string/about"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/profile_about"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="13dp"
                        android:layout_marginTop="2dp"
                        android:layout_marginBottom="9dp"
                        android:fontFamily="@font/roboto_regular"
                        android:padding="3dp"
                        android:textColor="@color/colorBlack"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/groups"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@color/colorWhite"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="13dp"
                        android:paddingTop="9dp"
                        android:paddingBottom="6dp"
                        android:text="@string/groups"
                        android:textSize="13sp" />

                </LinearLayout>

                <RelativeLayout
                    android:id="@+id/marks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@color/colorWhite"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="13dp"
                        android:paddingTop="11dp"
                        android:paddingBottom="11dp"
                        android:text="@string/marks"
                        android:textSize="15sp" />

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="15dp"
                        android:paddingTop="10dp"
                        android:src="@drawable/ic_mark_open" />

                </RelativeLayout>

                <LinearLayout
                    android:id="@+id/contacts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@color/colorWhite"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="13dp"
                        android:paddingTop="9dp"
                        android:paddingBottom="9dp"
                        android:text="@string/contacts"
                        android:textSize="13sp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/accounts"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="15dp"
                        android:background="@color/colorWhite"
                        android:paddingLeft="13dp"
                        android:paddingTop="9dp"
                        android:paddingBottom="9dp"
                        android:text="@string/accounts"
                        android:textSize="13sp" />

                </LinearLayout>

            </LinearLayout>
        </ScrollView>
    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
</LinearLayout>


